Changed and Added Photos
Added Photos to the Recipe pages and changed their sizes.

--- a/recipes/GrilledCheese.html
+++ b/recipes/GrilledCheese.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Chicken Katsu</h1>
-        <h2>Image Here</h2>
+        <h2><img src="images/grilled_cheese.jpg"></h2>
         <h3>Description</h3>
         <p>
             Learn how to make a grilled cheese sandwich in a nonstick pan with buttered bread and American 
