--- a/recipes/ChickenKatsu.html
+++ b/recipes/ChickenKatsu.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Chicken Katsu</h1>
-        <h2><img src=""></h2>
+        <h2><img src="images/chicken_katsu.jpg"></h2>
         <h3>Description</h3>
         <p>
             Chicken katsu is Japanese-style fried chicken. This is my family recipe and can also be used to 
