--- a/recipes/MacNCheese.html
+++ b/recipes/MacNCheese.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Homemade Mac and Cheese</h1>
-        <h2>Image Here</h2>
+        <h2><img src="images/macncheese.jpg"></h2>
         <h3>Description</h3>
         <p>
             This mac and cheese recipe with a buttered bread crumb topping is creamy and comforting. It's easy 
