--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="Recipes/ChickenKatsu.html">Chicken Katsu</a>
-    <a href="Recipes/MacNCheese.html">Mac and Cheese</a>
-    <a href="Recipes/GrilledCheese.html">Grilled Cheese</a>
+    <div class="recipe-container">
+      <a href="Recipes/ChickenKatsu.html">Chicken Katsu</a>
+      <a href="Recipes/MacNCheese.html">Mac and Cheese</a>
+      <a href="Recipes/GrilledCheese.html">Grilled Cheese</a>
+    </div>
+
   </body>
 </html>
