--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <div class="recipe-container">
       <a href="Recipes/ChickenKatsu.html">Chicken Katsu</a>
       <a href="Recipes/MacNCheese.html">Mac and Cheese</a>
